<resources>
    <string name="app_name">GroveryManagment</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="connect_with_host_device">Connect with an host device</string>
    <string name="share_your_recipes">Share your recipes</string>
    <string name="my_recipes">My recipes</string>
    <string name="add_shopping_list"> Add shopping list</string>
    <string name="add_recipe">Add recipe</string>
    <string name="name_product">Name product:</string>
    <string name="amount_product">Amount:</string>
    <string name="id">ID:</string>
    <string name="name">Name:</string>
    <string name="list_disabled">List disabled</string>
    <string name="list_enabled">List enabled</string>
    <string name="recipe_name">Recipe name</string>
    <string name="description_recipe">Description:</string>
    <string name="sumbit">Submit</string>
    <string name="ingredient_list">List of ingredient:</string>
    <string name="name_ingredient">Name ingredient:</string>
    <string name="dose_ingredient">Dose</string>
    <string name="product_taken">Taken</string>
    <string name="discovery">Discovery others devices</string>
    <string name="name_recipe">Name recipe:</string>
    <string name="edit_content_of_shopping_list">Edit content of shopping list</string>
    <string name="delete_shopping_list">Delete shopping list</string>
    <string name="insert_name">Insert name</string>
    <string name="insert_amount">Insert amount</string>
    <string name="insert_description">Insert description</string>
    <string name="dose2">Dose:</string>
    <string name="add_new_shopping_list">Add new shopping list</string>
    <string name="add_new_recipe">Add new recipe</string>
    <string name="add_new_product">Add new product</string>
    <string name="delete_recipe">Delete recipe</string>
    <string name="edit_recipe">Edit recipe</string>
    <string name="image_of_recipe">Image of recipe</string>
    <string name="save_recipe">Save recipe</string>
</resources>