<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_shopping_list"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_shopping_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_shopping_cart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/shopping_list_id_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/id"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@id/image_shopping_list"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/purple"/>

        <TextView
            android:id="@+id/shopping_list_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/shopping_list_id_text_view"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@id/shopping_list_id_text_view"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/purple"/>

        <TextView
            android:id="@+id/shopping_list_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/shopping_list_id_text_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/image_shopping_list"
            android:layout_margin="20dp"
            android:textColor="@color/green"/>

        <TextView
            android:id="@+id/shopping_list_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/shopping_list_id"
            app:layout_constraintLeft_toRightOf="@id/shopping_list_name_text_view"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/green"/>

        <ImageButton
            android:id="@+id/button_delete_shopping_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            android:backgroundTint="@color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="3dp"
            android:contentDescription="@string/delete_shopping_list"/>

        <ImageButton
            android:id="@+id/button_edit_content_shopping_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            android:backgroundTint="@color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/button_delete_shopping_list"
            android:contentDescription="@string/edit_content_of_shopping_list"
            android:layout_margin="3dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>