<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/relative_layout">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_button">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_add_recipe"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_text_name_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/recipe_name"
                    android:textSize="20sp"
                    android:inputType="textCapSentences"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    app:cardElevation="8dp"
                    app:cardMaxElevation="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardPreventCornerOverlap="true"
                    android:backgroundTint="@color/brown_wooden">

                    <ImageView
                        android:id="@+id/image_view_recipe"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:elevation="10dp"
                        android:background="@mipmap/ic_error_image"
                        android:layout_margin="10dp"
                        android:scaleType="centerCrop"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/image_of_recipe"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/description_recipe"
                    android:textSize="20sp"
                    android:textColor="@color/black" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp"
                    app:cardMaxElevation="10dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true">

                    <androidx.core.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="vertical"
                        android:scrollbarAlwaysDrawVerticalTrack="true">

                    <EditText
                        android:id="@+id/edit_text_description_recipe"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:textSize="20sp"
                        android:textAlignment="textStart"
                        android:hint="@string/insert_description"
                        android:textColor="@color/black"
                        android:inputType="textCapSentences|textMultiLine"/>

                    </androidx.core.widget.NestedScrollView>

                </androidx.cardview.widget.CardView>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_view_ingredient_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredient_list"
                    android:textSize="20sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textColor="@color/black"/>

                <ImageButton
                    android:id="@+id/button_add_ingredient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/text_view_ingredient_list"
                    android:src="@drawable/ic_add_ingredient_2"
                    android:backgroundTint="@color/transparent"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.core.widget.NestedScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:scrollbars="vertical"
                    android:scrollbarAlwaysDrawVerticalTrack="true">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_ingredient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

                </androidx.core.widget.NestedScrollView>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom">

        <Button
            android:id="@+id/submit_recipe_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sumbit"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/mybutton"
            android:textColor="@color/black"/>

    </LinearLayout>

</RelativeLayout>