<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="400dp"
    android:layout_height="150dp"

    android:layout_below="@+id/check_product_taken"
    android:layout_gravity="center"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_product"
            android:src="@mipmap/ic_food_drink"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/text_id_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@id/image_product"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/purple"/>

        <TextView
            android:id="@+id/text_view_id_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@id/text_id_product"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/purple"/>

        <TextView
            android:id="@+id/text_name_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/image_product"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/green"/>

        <TextView
            android:id="@+id/text_view_name_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/text_name_product"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/text_name_product"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/green"/>

        <TextView
            android:id="@+id/text_amount_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_name_product"
            android:text="@string/amount_product"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/image_product"
            android:layout_margin="10dp"
            android:textColor="@color/blue_green"/>

        <TextView
            android:id="@+id/text_view_amount_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_name_product"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/text_amount_product"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/text_amount_product"
            android:textColor="@color/blue_green"/>

        <ImageButton
            android:id="@+id/button_edit_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_view_name_product"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/ic_edit"
            app:layout_constraintRight_toLeftOf="@id/button_delete_product"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="3dp"/>

        <ImageButton
            android:id="@+id/button_delete_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/ic_delete"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="3dp"/>

        <CheckBox
            android:id="@+id/check_product_taken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/product_taken"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="3dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>