<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_shared_recipe"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardUseCompatPadding="true"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:id="@+id/text_view_name_shared_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <ImageButton
            android:id="@+id/button_save_shared_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_save_data"
            android:backgroundTint="@color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/save_recipe"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="29dp"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_recipe"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="true"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardMaxElevation="10dp">

            <TextView
                android:id="@+id/text_view_description_shared_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredient_list"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_ingredients_shared_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.cardview.widget.CardView>
